			ROX-Session
			A very simple session manager
			by Thomas Leonard

05-Nov-2002
~~~~~~~~~~~
Added OpenBox to list of window managers.

06-Oct-2002
~~~~~~~~~~~
Added Dutch translation (Jan Wagemakers).

25-Sep-2002
~~~~~~~~~~~
Added options to control mouse acceleration.

12-Sep-2002 (Release 0.1.17)
~~~~~~~~~~~
Switch to log window display if too many messages are shown.
Increase history size limit.

11-Sep-2002
~~~~~~~~~~~
Add timestamps to log messages in history window (suggested by krjw).

05-Aug-2002
~~~~~~~~~~~
Translated AppInfo menu entries into Spanish (Marcelo Ramos).

02-Aug-2002
~~~~~~~~~~~
Allow a full command for the window manager, not just a program name
(requested by krjw).
Bugfix: If the window manager ran, but quit really quickly, ROX-Session didn't
	notice!

22-Jul-2002
~~~~~~~~~~~
Send errors from ROX-Session itself to stdout, rather than trying to display
them in the window and possibly deadlocking (reported by krjw).

19-Jul-2002
~~~~~~~~~~~
Change 'Preferences' to 'Session Settings' in logout box, to make it more
obvious what it does.

19-Jun-2002 (Release 0.1.16)
~~~~~~~~~~~
Added message window so you can see errors after the popup has hidden itself.

11-Jun-2002
~~~~~~~~~~~
Require version 2.0.1 or later of Gtk, due to bugs in 2.0.0.

31-May-2002
~~~~~~~~~~~
Bugfix: Really added missing linker flags (reported by Stephen Watson again).

30-May-2002
~~~~~~~~~~~
Bugfix: Could display the Logout box on startup.

25-May-2002
~~~~~~~~~~~
Fix compile problem on FreeBSD (Jimmy Olgeni).

15-May-2002 (Release 0.1.15)
~~~~~~~~~~~
Using the new XFT font system is now the default (edit ROX-Session/AppRun
if you want it off).
Added xfwm and xfwm4 to window manager list.

30-Apr-2002
~~~~~~~~~~~
Added Metacity and kwin to window manager list, and updated list of failsafe
window managers (suggested by Michel Alexandre Salim).

23-Apr-2002
~~~~~~~~~~~
Add BlackBox and FluxBox to the window manager list, and added option to