@@ -288,7 +288,7 @@ xsettings_manager_set_color (XSettingsManager *manager,
   return xsettings_manager_set_setting (manager, &setting);
 }
 
-size_t
+static size_t
 setting_length (XSettingsSetting *setting)
 {
   size_t length = 8;	/* type + pad + name-len + last-change-serial */
@@ -311,7 +311,7 @@ setting_length (XSettingsSetting *setting)
 }
 
 /* Serialize setting into buffer (which must be large enough) */
-void
+static void
 setting_store (XSettingsSetting *setting,
 	       XSettingsBuffer *buffer)
 {
